--- a/war/Omniscience.html
+++ b/war/Omniscience.html
@@ -45,7 +45,7 @@
     </noscript>
 
     <h1>Omniscience</h1>
-    <h2>Virtual Reality Event Discovery</h2>
+    <h2>Augmented Reality Event Discovery</h2>
 	<div id="calendarList" align="center" width="70%"></div>
     </body>
 </html>
